@@ -48,6 +48,7 @@ import java.util.Locale;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 @Command(
 		name = "adivinheascartas",
@@ -58,7 +59,7 @@ import java.util.function.Consumer;
 public class GuessTheCardsCommand implements Executable {
 
 	@Override
-	public void execute(User author, Member member, String argsAsText, String[] args, Message message, TextChannel channel, Guild guild) {
+	public void execute(User author, Member member, String argsAsText, String[] args, Message message, TextChannel channel, Guild guild, String prefix) {
 		if (Main.getInfo().gameInProgress(author.getId())) {
 			channel.sendMessage(I18n.getString("err_you-are-in-game")).queue();
 			return;
@@ -71,11 +72,11 @@ public class GuessTheCardsCommand implements Executable {
 			BufferedImage mask = Helper.toColorSpace(ImageIO.read(masks[Helper.rng(masks.length, true)]), BufferedImage.TYPE_INT_ARGB);
 
 			List<Card> c = Helper.getRandomN(CardDAO.getCards(), 3, 1);
-			List<String> names = c.stream().map(Card::getId).toList();
+			List<String> names = c.stream().map(Card::getId).collect(Collectors.toList());
 			List<BufferedImage> imgs = c.stream()
 					.map(Card::drawCardNoBorder)
 					.map(bi -> Helper.toColorSpace(bi, BufferedImage.TYPE_INT_ARGB))
-					.toList();
+					.collect(Collectors.toList());
 
 			BufferedImage img = new BufferedImage(225, 350, BufferedImage.TYPE_INT_ARGB);
 			Graphics2D g2d = img.createGraphics();
