@@ -106,7 +106,7 @@ public class Hitotsu extends Game {
 					Collections.shuffle(l);
 					return l.stream().limit(25);
 				})
-				.toList();
+				.collect(Collectors.toList());
 
 		deque.addAll(inGame);
 		if (deque.size() < 100) {
@@ -172,7 +172,7 @@ public class Hitotsu extends Game {
 			}
 
 			int finalLowest = lowest;
-			List<Hand> winners = seats.values().stream().filter(h -> h.getCards().size() <= finalLowest).toList();
+			List<Hand> winners = seats.values().stream().filter(h -> h.getCards().size() <= finalLowest).collect(Collectors.toList());
 
 			if (winners.size() == 1) {
 				Hand h = winners.get(0);
