@@ -19,6 +19,7 @@
 package com.kuuhaku.model.records.anime;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record Studios(List<StudiosEdge> edges) {
 
@@ -30,6 +31,6 @@ public record Studios(List<StudiosEdge> edges) {
 		return edges.stream()
 				.map(StudiosEdge::node)
 				.map(StudiosNode::name)
-				.toList();
+				.collect(Collectors.toList());
 	}
 }
