@@ -52,6 +52,7 @@ import java.net.URISyntaxException;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @SuppressWarnings("localvariable")
@@ -283,7 +284,7 @@ public class ShiroInfo {
 	}
 
 	public static List<String> getStaff() {
-		return Stream.concat(developers.stream(), supports.keySet().stream()).distinct().toList();
+		return Stream.concat(developers.stream(), supports.keySet().stream()).distinct().collect(Collectors.toList());
 	}
 
 	//NON-STATIC
@@ -342,7 +343,7 @@ public class ShiroInfo {
 
 	public List<Member> getMembersByID(String userID) {
 		User u = getUserByID(userID);
-		return u.getMutualGuilds().stream().map(g -> g.getMemberById(userID)).toList();
+		return u.getMutualGuilds().stream().map(g -> g.getMemberById(userID)).collect(Collectors.toList());
 	}
 
 	public Role getRoleByID(String roleID) {
